# mapce

./: .env.example  .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml
.claude/: settings.local.json
docs/: architecture.md  data-sources.md  data-sources_EN.md  development.md  development_EN.md  installation.md  mcp-tools.md  storage.md  storage_EN.md  troubleshooting.md  troubleshooting_EN.md  usage.md  usage_EN.md
scripts/: init_db.py
src/mapce/: __init__.py
src/mapce/core/: __init__.py  code_mapper.py  embedding.py  incremental.py  indexing.py  retrieval.py
src/mapce/core/chunking/: __init__.py  _util.py  code.py  paper.py
src/mapce/db/: __init__.py  _sql.py  connection.py  operations.py  schema.py
src/mapce/mcp/: __init__.py  _handlers.py  server.py  tools.py
src/mapce/mineru/: __init__.py  api.py  parser.py
src/mapce/prompts/: __init__.py  concept_explain.j2  figure_explain.j2  impl_guide.j2  method_compare.j2  reproduction.j2  trend_overview.j2
src/mapce/sources/: __init__.py  arxiv.py  local.py  zotero.py
