[project]
name = "mapce"
version = "0.1.0"
description = "Personal RAG knowledge base for embodied AI and robotics research"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "kzzzza" },
]
dependencies = [
    "fastembed>=0.4.0",
    "lancedb>=0.17.0",
    "httpx>=0.27.0",
    "socksio>=1.0.0",
    "mcp>=1.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tree-sitter>=0.23.0",
    "pyarrow>=16.0.0",
    "tqdm>=4.66.0",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mapce"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]
